# blender-krita-link-plugin

./: .gitignore  KritaBlenderLink.desktop  blenderKritaLink.desktop  readme.md  ruff.toml
BlenderKritaLink/: __init__.py  connection.py  image_manager.py  uv_extractor.py  watch.py
BlenderKritaLink/ui/: __init__.py
KritaBlenderLink/: BlenderKritaLinkUI.ui  ImageState.py  ImagesList.ui  Manual.html  __init__.py  action.action  blender_krita_link.py  connection.py  lb.py  settings.py  uvs_viewer.py
KritaBlenderLink/actions/: KritaBlenderLink.action
KritaBlenderLink/ui/: ImageItem.py  ImageList.py  __init__.py
blenderKritaLink/: __init__.py  blender_krita_link.py  connection.py  image_manager.py  uv_extractor.py
blenderKritaLink/ui/: __init__.py
cppPart/uv-select/: CMakeLists.txt  UvSelect.cpp  UvSelect.h  kritashapesselection.action  kritashapesselection.json
